translation stuff, AGAIN

--- a/app/templates/base_transport.html
+++ b/app/templates/base_transport.html
@@ -17,7 +17,7 @@
         <div class="image-text">
             <span class="image"></span>
             <div class="text logo-text">
-                <span class="name">Transport</span>
+                <span class="name">{{ _('Transport') }}</span>
             </div>
         </div>
         <i class='bx bx-chevron-right toggle'></i>
@@ -36,7 +36,7 @@
             <li>
                 <a href="{{ url_for('routes.logout') }}">
                     <i class='bx bx-log-out icon'></i>
-                    <span class="text nav-text">Logout</span>
+                    <span class="text nav-text">{{ _('Logout') }}</span>
                 </a>
             </li>
         </div>
