fix darkmode scrollbox op transportpagina

--- a/app/static/css/admin_stationstatus.css
+++ b/app/static/css/admin_stationstatus.css
@@ -290,3 +290,9 @@ body.dark-mode .form-control {
   background: #1e1e1e;
   color: whitesmoke;
 }
+
+body.dark-mode .scrollbox {
+    background: #1e1e1e;
+    border:none;
+    color:black;
+}
