main slides img toegevoegd

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,10 +22,10 @@
   <div id="card-wrapper" class="card-wrapper">
   <ul class="card-slider swiper-wrapper">
     <li class="card-item swiper-slide">
-      <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" alt="idk lmao" class="card-image">
+      <img class="card-image" src="../static/img/img_tarieven_main.jpg">
       <div class="card-item__content">
         <h1 class="card-item__title">{{ _('FORMULES EN') }} <span class="clr-red">{{ _('TARIEVEN') }}</span></h1>
-        <img style="width: 90%;" src="../static/images/component1.svg">
+
         <p class="card-item__text">{{ _('Kies jouw formule!') }}<br>
         {{ _('Al jouw ritten van 30 minuten zijn inbegrepen in de prijs van jouw gekozen formule.') }}<br>
         {{ _('Plaats na elke rit een fiets terug in een Velo-station dichtbij jouw bestemming.') }}<br>
@@ -35,11 +35,10 @@
       </div>
     </li>
     <li class="card-item swiper-slide">
-      <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" alt="idk lmao" class="card-image">
+      <img class="card-image" src="../static/img/img_defect_main.jpg">
       <div class="card-item__content">
         <h1 class="card-item__title">{{ _('FIETS') }} <span class="clr-red">{{ _('DEFECT?') }}</span></h1>
-        <img style="width: 90%;" src="../static/images/component1.svg">
-        <p class="card-item__text">{{ _('Meld een fiets als defect.') }}<br>
+          <p class="card-item__text">{{ _('Meld een fiets als defect.') }}<br>
         {{ _('Zo wordt de fiets automatisch geblokkeerd in het Velo-station en kunnen onze chauffeurs deze ophalen om te laten herstellen.') }}<br>
         {{ _('Andere gebruikers zullen de fiets dan niet meer toegewezen krijgen.') }}<br>
         {{ _('Het zadel omdraaien is handig, maar is geen must als je een melding gemaakt hebt.') }}<br></p>
@@ -47,10 +46,9 @@
       </div>
     </li>
     <li class="card-item swiper-slide">
-      <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" alt="idk lmao" class="card-image">
+      <img class="card-image" src="../static/img/img_locatie_main.jpg">
       <div class="card-item__content">
         <h1 class="card-item__title">{{ _('306 LOCATIES MET') }} <span class="clr-red">{{ _('FIETSEN') }}</span></h1>
-        <img style="width: 90%;" src="../static/images/component1.svg">
         <p class="card-item__text">{{ _('Overal in Antwerpen staat er een fiets voor je klaar!') }}<br>
         {{ _('✔ Fietsen 24/7 beschikbaar.') }}<br>
         {{ _('✔ Herverdeling over de Velo-stations 7/7.') }}<br>
