--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -64,7 +64,7 @@ header {
 }
 
 .nav-links a:hover {
-  color: #2b2d42;
+  color: #222225;
 }
 .nav-links a:hover::after {
   transform: scaleX(1);
@@ -399,7 +399,6 @@ body.dark-mode .dark-toggle-btn:hover {
     gap: 0;
     overflow: hidden;
     max-height: 0;
-    transition: max-height 0.3s ease-out;
   }
 
   .menu-toggle:checked + .hamburger + .nav-links {
@@ -407,7 +406,8 @@ body.dark-mode .dark-toggle-btn:hover {
     width: 20rem;
     padding: 1rem 0;
     border-top: 1px solid #444;
-    z-index: 10;
+    border-radius: 0 0 15px 15px;
+    z-index: 100;
   }
 
   .nav-links.open {
@@ -450,11 +450,11 @@ body.dark-mode .dark-toggle-btn:hover {
 
   .hamprofile{
     display: block;
-    background: none;
-    border: none;
+    background: white;
+    border-radius: 20px;
     font-size: 1.5rem;
     cursor: pointer;
-    padding: 0.5rem;
+    padding: 1px 10px;
     color: white;
     margin-right: 10px;
     z-index: 1000;
@@ -468,7 +468,6 @@ body.dark-mode .dark-toggle-btn:hover {
     flex-direction: column;
     overflow: hidden;
     max-height: 0;
-    transition: max-height 0.3s ease-out;
     z-index: 999;
     width: 20rem;
     padding: 0;
@@ -478,6 +477,7 @@ body.dark-mode .dark-toggle-btn:hover {
     max-height: 500px;
     padding: 1rem 3rem;
     border-top: 1px solid #444;
+    border-radius: 0 0 15px 15px;
   }
 
   .nav-buttons a,
@@ -486,6 +486,7 @@ body.dark-mode .dark-toggle-btn:hover {
     border-bottom: 1px solid #ddd;
     background: transparent;
     width: 100%;
+    border-radius: 0 0 15px 15px;
   }
 
   .dark-toggle-btn {
@@ -503,4 +504,8 @@ body.dark-mode .dark-toggle-btn:hover {
   body.dark-mode .dark-toggle-btn {
     color: white;
   }
+
+  .nav-links a:hover {
+  color: #D41444;
+}
 }
