fix img tarieven

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,10 +22,10 @@
   <div id="card-wrapper" class="card-wrapper">
   <ul class="card-slider swiper-wrapper">
     <li class="card-item swiper-slide">
-      <img class="card-image" src="../static/img/img_tarieven_main.jpg">
+      <img class="card-image"src="../static/img/img_tarieven_main.jpg">
       <div class="card-item__content">
         <h1 class="card-item__title">{{ _('FORMULES EN') }} <span class="clr-red">{{ _('TARIEVEN') }}</span></h1>
-
+        <img style="width: 90%;" src="../static/images/component1.svg">
         <p class="card-item__text">{{ _('Kies jouw formule!') }}<br>
         {{ _('Al jouw ritten van 30 minuten zijn inbegrepen in de prijs van jouw gekozen formule.') }}<br>
         {{ _('Plaats na elke rit een fiets terug in een Velo-station dichtbij jouw bestemming.') }}<br>
@@ -35,10 +35,11 @@
       </div>
     </li>
     <li class="card-item swiper-slide">
-      <img class="card-image" src="../static/img/img_defect_main.jpg">
+      <img class="card-image"src="../static/img/img_defect_main.jpg">
       <div class="card-item__content">
         <h1 class="card-item__title">{{ _('FIETS') }} <span class="clr-red">{{ _('DEFECT?') }}</span></h1>
-          <p class="card-item__text">{{ _('Meld een fiets als defect.') }}<br>
+        <img style="width: 90%;" src="../static/images/component1.svg">
+        <p class="card-item__text">{{ _('Meld een fiets als defect.') }}<br>
         {{ _('Zo wordt de fiets automatisch geblokkeerd in het Velo-station en kunnen onze chauffeurs deze ophalen om te laten herstellen.') }}<br>
         {{ _('Andere gebruikers zullen de fiets dan niet meer toegewezen krijgen.') }}<br>
         {{ _('Het zadel omdraaien is handig, maar is geen must als je een melding gemaakt hebt.') }}<br></p>
@@ -46,9 +47,10 @@
       </div>
     </li>
     <li class="card-item swiper-slide">
-      <img class="card-image" src="../static/img/img_locatie_main.jpg">
+      <img class="card-image"src="../static/img/img_locatie_main.jpg">
       <div class="card-item__content">
         <h1 class="card-item__title">{{ _('306 LOCATIES MET') }} <span class="clr-red">{{ _('FIETSEN') }}</span></h1>
+        <img style="width: 90%;" src="../static/images/component1.svg">
         <p class="card-item__text">{{ _('Overal in Antwerpen staat er een fiets voor je klaar!') }}<br>
         {{ _('✔ Fietsen 24/7 beschikbaar.') }}<br>
         {{ _('✔ Herverdeling over de Velo-stations 7/7.') }}<br>
