--- a/app/templates/tarieven.html
+++ b/app/templates/tarieven.html
@@ -17,7 +17,7 @@
     <div id="card-wrapper" class="card wrapper">
     <ul class="card-slider swiper-wrapper">
         <li class="card-item swiper-slide">
-            <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
+           <img class="card-image"src="../static/img/img_tarieven_main.jpg">
             <div class="card-item__content">
                 <h1 class="card-item__title" style="margin-bottom: 5px;">{{ _('DAGPAS') }}</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
@@ -30,7 +30,7 @@
             </div>
         </li>
         <li class="card-item swiper-slide">
-            <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
+            <img class="card-image"src="../static/img/img_defect_main.jpg">
             <div class="card-item__content">
                 <h1 class="card-item__title" style="margin-bottom: 5px;">{{ _('WEEKPAS') }}</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
@@ -43,7 +43,7 @@
             </div>
         </li>
         <li class="card-item swiper-slide">
-            <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
+            <img class="card-image"src="../static/img/img_locatie_main.jpg">
             <div class="card-item__content">
                 <h1 class="card-item__title" style="margin-bottom: 5px;">{{ _('JAARKAART') }}</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
