--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -110,6 +110,24 @@ body.dark-mode #search-container button:hover {
     border-color: #D41444;
 }
 
+.btn-eindstation{
+    margin-top: 5px;
+    padding: 6px 14px;
+    font-size: 14px;
+    border-radius: 20px;
+    font-weight: bolder;
+    border: 3px solid #2B2D42;
+    color: #2B2D42;
+    background: none;
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+
+.btn-eindstation:hover{
+    color: #D41444;
+    border-color: #D41444;
+}
+
 #show-all-container button:hover {
     border-color: #D41444;
     color: #D41444;
